tests/NormalTests/paczka2/big_fuzzy/20026992.err
Error in line 3: K8uwjC3 A629 1,3
Error in line 4: S504 A629 93,6
Error in line 13: S4S64rRBG A629 _8,6
Error in line 8: S4S64rRBG S10 6,9
Error in line 18: VIPCw A629 49,8
Error in line 21: 6Dmztrk S10 91,0
Error in line 29: S504 A629 68,3
Error in line 23: VIPCw S504 74,0
Error in line 37: VIPCw A260 26,0
Error in line 41: VIPCw S10 1,4
Error in line 43: 5ev2 S10 98,5
Error in line 44: VIPCw A629 27,1
Error in line 50: VIPCw S10 2,9
Error in line 52: O3UeKHF A260 6,0
Error in line 38: K8uwjC3 S504 33,3
Error in line 70: O3UeKHF S504 12,3
Error in line 73: O3UeKHF S10 45,6
Error in line 62: S504 A260 262,0
Error in line 88: K8uwjC3 S10 66,7
Error in line 93: S4S64rRBG A260 71,3
Error in line 99: 6Dmztrk A260 68,7
Error in line 95: S4S64rRBG S10 69,4
Error in line 113: O3UeKHF A629 40,2
Error in line 119: 6Dmztrk S504 95,5
Error in line 121: S504 A629 96,9
Error in line 132: 5ev2 S504 51,2
Error in line 126: S4S64rRBG A260 92,9
Error in line 136: S4S64rRBG S504 78,3
Error in line 138: S4S64rRBG A629 65,0
Error in line 137: 6Dmztrk S504 46,8
Error in line 139: S4S64rRBG S10 26,1
Error in line 140: 6Dmztrk A260 43,8
Error in line 152: VIPCw S504 51,1
Error in line 197: VIPCw A629 9,63
Error in line 211: K8uwjC3 S504 38,0
Error in line 216: S504 S10 U2,1
Error in line 247: VIPCw S504 38,6
